# ghaggs-joelsi-project

./: Cargo.toml  README.md
docs/: BACKEND.md  work_flowchart.md
poker/: Cargo.toml
poker/src/: client_net.rs  lib.rs  main.rs
poker/src/structs/: card.rs  collection.rs  enums.rs  player.rs  playerchips.rs  pot.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs  main.rs
src/structs/: deck.rs  enums.rs  hand.rs  misc.rs  mod.rs  player.rs  playerchips.rs  pot.rs
