[package]
name = "poker"
version = "0.1.0"
edition = "2024"

[dependencies]
ggez = "0.9.3"
rand = "0.9.1"
itertools = "0.14.0"
poker_eval = "0.1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
serde = "1.0.219"
tokio = {version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
url = "2.5.4"
serde_json = "1.0.140"
